--- a/src/app/routes/transportation/easy-post/easy-post.component.html
+++ b/src/app/routes/transportation/easy-post/easy-post.component.html
@@ -91,7 +91,13 @@
                     
                   <input nz-input ngx-google-places-autocomplete (onAddressChange)="handleShipFromAddressChange($event)" />
                   -->
-                  <input nz-input  />
+                  
+                  <input #ngxPlaces="ngx-places"
+                      nz-input 
+                      class="input"
+                      type="text"
+                      ngx-gp-autocomplete
+                      (onAddressChange)="handleShipFromAddressChange($event)" />
                 </nz-form-control>
               </nz-form-item>
             </div> 
@@ -145,7 +151,13 @@
                     
                   <input nz-input ngx-google-places-autocomplete (onAddressChange)="handleReturnAddressChange($event)" />
                   -->
-                  <input nz-input />
+                  
+                <input #ngxPlaces="ngx-places"
+                      nz-input 
+                      class="input"
+                      type="text" 
+                      ngx-gp-autocomplete
+                      (onAddressChange)="handleReturnAddressChange($event)" />
                 </nz-form-control>
               </nz-form-item>
             </div> 
@@ -255,8 +267,8 @@
             </nz-form-label>
             <nz-form-control [nzSpan]="18">
               <nz-select nzAllowClear formControlName="type" style="width: 300px;">
-                <nz-option *ngFor="let reportType of reportTypes | keys" nzValue="{{ reportType.key }}"
-                  nzLabel="{{ 'REPORT-TYPE-' + reportType.key | i18n }}">
+                <nz-option *ngFor="let reportType of reportTypesKeys" nzValue="{{ reportType }}"
+                  nzLabel="{{ 'REPORT-TYPE-' + reportType | i18n }}">
                 </nz-option>
               </nz-select>
             </nz-form-control>
