--- a/src/app/routes/util/custom-report-maintenance/custom-report-maintenance.component.html
+++ b/src/app/routes/util/custom-report-maintenance/custom-report-maintenance.component.html
@@ -116,7 +116,7 @@
                       {{ 'query' | i18n }}
                     </nz-form-label>
                     <nz-form-control [nzSpan]="20" >                    
-                        <textarea rows="4" nz-input [(ngModel)]="currentCustomReport!.query"></textarea> 
+                        <textarea rows="4"  cols="150" nz-input [(ngModel)]="currentCustomReport!.query"></textarea> 
                     </nz-form-control>
                   </nz-form-item>
                 </div>
