--- a/src/app/routes/inbound/inbound-qc-configuration-maintenance/inbound-qc-configuration-maintenance.component.html
+++ b/src/app/routes/inbound/inbound-qc-configuration-maintenance/inbound-qc-configuration-maintenance.component.html
@@ -162,7 +162,7 @@
           </nz-form-label>
           <nz-form-control [nzSpan]="12" nzHasFeedback nzErrorTip="{{ 'error.form.field.required' | i18n }}">
   
-              <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
+              <nz-input-group >
                   <input nz-input  [(ngModel)]="this.currentQCConfiguration.qcQuantityPerReceipt"  />
                 </nz-input-group>
   
@@ -178,7 +178,7 @@
           </nz-form-label>
           <nz-form-control [nzSpan]="12" nzHasFeedback nzErrorTip="{{ 'error.form.field.required' | i18n }}">
   
-              <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
+              <nz-input-group>
                   <input nz-input  [(ngModel)]="this.currentQCConfiguration.qcPercentage"  />
                 </nz-input-group>
   
