--- a/src/app/routes/util/custom-report-maintenance/custom-report-maintenance.component.html
+++ b/src/app/routes/util/custom-report-maintenance/custom-report-maintenance.component.html
@@ -63,6 +63,22 @@
                     </nz-form-item>
                 </div>
             </div>
+            
+            <div nz-row [nzGutter]="24">
+                <div nz-col [nzSpan]="16">
+                  <nz-form-item>
+                    <nz-form-label [nzSpan]="4">
+                      {{ 'description' | i18n }}
+                    </nz-form-label>
+                    <nz-form-control [nzSpan]="20" 
+                    >
+                      <input   type="text" nz-input [(ngModel)]="currentCustomReport!.description"  /> 
+                    </nz-form-control>
+                  </nz-form-item>
+                </div>
+             
+            </div>
+
             <div nz-row [nzGutter]="24">
                 <div nz-col [nzSpan]="8">
                 <nz-form-item>
@@ -236,5 +252,31 @@
         </div>
         
         
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="16">
+            <nz-form-item nzFlex>
+                <nz-form-label [nzSpan]="10">
+                
+                    {{ 'required' | i18n }}
+                </nz-form-label>
+                <nz-form-control [nzSpan]="14">
+                    <label nz-checkbox [(ngModel)]="newParameterValueRequired" >
+                       </label> 
+                </nz-form-control>
+            </nz-form-item>
+            </div>  
+        </div>
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="16">
+            <nz-form-item nzFlex>
+                <nz-form-label [nzSpan]="10"  nzFor="defaultValue">
+                {{ 'defaultValue' | i18n }}
+                </nz-form-label>
+                <nz-form-control [nzSpan]="14">
+                    <input   type="text" nz-input [(ngModel)]="newParameterDefaultValue"  />
+                </nz-form-control>
+            </nz-form-item>
+            </div>  
+        </div>
     </ng-container>
   </nz-modal>
